flux/apps/int/readeck/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readeck
  template:
    metadata:
      labels:
        app: readeck
    spec:
      containers:
        - name: readeck
          image: codeberg.org/readeck/readeck:0.21.6
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: readeck-data-pvc
              mountPath: /readeck
          ports:
            - containerPort: 9090
              name: http
      volumes:
        - name: readeck-data-pvc
          persistentVolumeClaim:
            claimName: readeck-data-pvc
