flux/apps/int/readeck/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck-svc
spec:
  selector:
    app: readeck
  type: ClusterIP
  ports:
    - port: 9090
      name: http 
      targetPort: http
      protocol: TCP
