flux/apps/int/readeck/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readeck-httproute
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-int
  hostnames:
    - "bookmarks.vpn.fingol.pro"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: readeck-svc
          port: 9090
